[package]
authors = ["Semantic Network Team"]
description = ''
edition = '2021'
homepage = 'https://substrate.dev'
name = 'pallet-wrapr-rpc'
repository = ''
version = "1.0.0"

[dependencies]
codec               = { package = 'parity-scale-codec', version = '2.2.0' }
jsonrpc-core        = '18.0.0'
jsonrpc-core-client = '18.0.0'
jsonrpc-derive      = '18.0.0'
jsonrpc-pubsub      = "18.0.0"
tidefi-primitives   = { git = "https://github.com/tide-labs/primitives", default-features = false }
serde               = { version = '1.0.124', features = ['derive'] }
sp-api              = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-blockchain       = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-core             = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-runtime          = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
frame-support       = { git = "https://github.com/tide-labs/substrate", branch = "tidechain", default-features = false }

pallet-wrapr-rpc-runtime-api = { path = 'runtime-api', default-features = false }
