[package]
name = "tidechain-client"
version = "0.1.0"
authors = ["Semantic Network Team"]
edition = "2021"
license = "GNU GPL v3"
homepage = ""
repository = ""

[dependencies]
jsonrpc-core = "18.0.0"
sc-client-api = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-blockchain = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-keystore = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-runtime = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-api = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-consensus = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-consensus-babe = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-storage = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-chain-spec = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-rpc = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-executor = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-service = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-consensus-babe = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-consensus-babe-rpc = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-consensus-epochs = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-finality-grandpa = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-finality-grandpa-rpc = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-keystore = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-sync-state-rpc = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-transaction-pool = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-rpc-api = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-transaction-pool-api = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
substrate-frame-rpc-system = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
pallet-transaction-payment-rpc = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
parity-scale-codec = { version = "2.0.0", default-features = false }
sp-finality-grandpa = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
frame-system-rpc-runtime-api = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-offchain = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-session = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-authority-discovery = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
frame-benchmarking = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }

sp-block-builder = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
tidefi-primitives = { git = "https://github.com/tide-labs/primitives", default-features = false }
pallet-wrapr-rpc = { path = '../../frame/wrapr-rpc' }
tidechain-runtime = { path = "../../runtime/tidechain", optional = true }
hertel-runtime = { path = "../../runtime/hertel", optional = true }

[features]
default = ["tidechain"]
tidechain = ["tidechain-runtime"]
hertel = ["hertel-runtime"]