[package]
version = "0.2.2"
name = "tidechain-client"
authors = ["Semantic Network Team <publishers@tidelabs.org>"]
edition = "2021"

[dependencies]
jsonrpc-core = "18.0.0"
sc-client-api = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-blockchain = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-keystore = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-runtime = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-api = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-consensus = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-consensus-babe = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-storage = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sc-chain-spec = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sc-rpc = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sc-executor = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sc-service = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sc-consensus-babe = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sc-consensus-babe-rpc = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sc-consensus-epochs = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sc-finality-grandpa = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sc-finality-grandpa-rpc = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sc-keystore = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sc-sync-state-rpc = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-transaction-pool = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sc-rpc-api = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sc-transaction-pool-api = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
substrate-frame-rpc-system = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-transaction-payment-rpc = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
parity-scale-codec = { version = "3", default-features = false }
sp-finality-grandpa = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
frame-system-rpc-runtime-api = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-offchain = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-session = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-authority-discovery = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
frame-benchmarking = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }

sp-block-builder = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
tidefi-primitives = { git = "https://github.com/tidelabs/primitives", branch = "dev", default-features = false }
pallet-tidefi-rpc = { path = '../../frame/tidefi-rpc' }
tidechain-runtime = { path = "../../runtime/tidechain", optional = true }
lagoon-runtime = { path = "../../runtime/lagoon", optional = true }

[features]
default = ["tidechain"]
tidechain = ["tidechain-runtime"]
lagoon = ["lagoon-runtime"]