[package]
version = "0.1.4"
name = "tidechain-rpc"
authors = ["Semantic Network Team"]
edition = "2021"

[dependencies]
jsonrpc-core = "18.0.0"
sc-client-api = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-blockchain = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-keystore = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-runtime = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-api = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-consensus = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-consensus-babe = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-chain-spec = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-rpc = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-consensus-babe = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-consensus-babe-rpc = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-consensus-epochs = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-finality-grandpa = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-finality-grandpa-rpc = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-keystore = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-sync-state-rpc = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-transaction-pool = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-rpc-api = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-transaction-pool-api = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
substrate-frame-rpc-system = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
pallet-transaction-payment-rpc = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
parity-scale-codec = { version = "3", default-features = false }
sp-block-builder = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
tidefi-primitives = { git = "https://github.com/tide-labs/primitives", branch = "dev", default-features = false }
pallet-tidefi-rpc = { path = '../../frame/tidefi-rpc' }
