[package]
version = "0.6.3"
name = "tidechain-rpc"
authors = ["Semantic Network Team <publishers@tidelabs.org>"]
edition = "2021"

[dependencies]
jsonrpsee = { version = "0.14", features = ["server"] }
sc-client-api = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sp-blockchain = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sp-keystore = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sp-runtime = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sp-api = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sp-consensus = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sp-consensus-babe = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sc-chain-spec = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sc-rpc = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sc-consensus-babe = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sc-consensus-babe-rpc = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sc-consensus-epochs = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sc-finality-grandpa = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sc-finality-grandpa-rpc = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sc-keystore = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sc-sync-state-rpc = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sp-transaction-pool = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sc-rpc-api = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sc-transaction-pool-api = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
substrate-frame-rpc-system = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
pallet-transaction-payment-rpc = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
parity-scale-codec = { version = "3", default-features = false }
substrate-state-trie-migration-rpc = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sp-block-builder = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
tidefi-primitives = { git = "https://github.com/tidelabs/primitives", branch = "substrate-monthly-2023-02", default-features = false }
pallet-tidefi-rpc = { path = '../../frame/tidefi-rpc' }
