[package]
version = "0.1.2"
name = "tidechain-service"
authors = ["Semantic Network Team"]
edition = "2021"

[dependencies]
structopt = "0.3.8"
codec = { package = "parity-scale-codec", version = "2.0.0" }
itertools = "0.10.1"
futures = "0.3.12"
thiserror = "1.0.23"
tracing = "0.1.25"
serde_json = "1.0.59"
hex = "0.4.3"
hex-literal = "0.3.1"
indexmap = { version = "1.6.2", features = ["serde-1"] }
serde = { version = "1.0.132", features = ["derive"] }
strum = { version = "0.22.0" }
jsonrpc-core = "15.1.0"

sc-cli = { git = "https://github.com/tide-labs/substrate", branch = "tidechain", features = ["wasmtime"] }
sp-core = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-executor = { git = "https://github.com/tide-labs/substrate", branch = "tidechain", features = ["wasmtime"] }
sc-service = { git = "https://github.com/tide-labs/substrate", branch = "tidechain", features = ["wasmtime"] }
sc-telemetry = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-keystore = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-inherents = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-transaction-pool = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-transaction-pool = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-consensus-babe = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-consensus-babe = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-consensus = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-consensus = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-finality-grandpa = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-sync-state-rpc = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-finality-grandpa = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-client-api = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-runtime = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-offchain = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-session = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-authority-discovery = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-storage = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-chain-spec = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-network = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-authority-discovery = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
# sc-finality-grandpa-warp-sync = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-consensus-slots = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-trie = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-timestamp = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-authorship = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-consensus-uncles = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
pallet-staking = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }

sc-rpc = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-api = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-rpc-api = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-blockchain = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-block-builder = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sc-basic-authorship = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
substrate-frame-rpc-system = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
pallet-transaction-payment-rpc = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
frame-system-rpc-runtime-api = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
pallet-im-online = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
frame-benchmarking = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
substrate-prometheus-endpoint = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }

# Tidechain
tidefi-primitives = { git = "https://github.com/tide-labs/primitives", branch = "dev", default-features = false }
tidechain-rpc = { path = "../rpc" }
tidechain-client = { path = "../client", default-features = false, optional = true }

# Tidechain runtimes
tidechain-runtime = { path = "../../runtime/tidechain", optional = true }
hertel-runtime = { path = "../../runtime/hertel", optional = true }

[features]
default = [ "tidechain-native", "full-node" ]
full-node = [
	"tidechain-client"
]
runtime-benchmarks = [
	"tidechain-runtime/runtime-benchmarks",
	"hertel-runtime/runtime-benchmarks",
]

tidechain-native = [ "tidechain-runtime", "tidechain-client/tidechain" ]
hertel-native = [ "hertel-runtime", "tidechain-client/hertel" ]
