[package]
version = "0.7.0"
name = "tidechain-service"
authors = ["Semantic Network Team <publishers@tidelabs.org>"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3" }
itertools = "0.10.1"
futures = "0.3.12"
thiserror = "1.0.30"
tracing = "0.1.34"
serde_json = "1.0.59"
hex = "0.4.3"
hex-literal = "0.3.1"
serde = { version = "1.0.132", features = ["derive"] }
strum = { version = "0.23.0" }
jsonrpc-core = "15.1.0"

sc-cli = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sp-core = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sc-executor = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sc-service = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sc-telemetry = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sc-keystore = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sp-inherents = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sc-transaction-pool = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sp-transaction-pool = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sc-consensus-babe = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sp-consensus-babe = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sp-consensus = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sc-consensus = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sc-consensus-grandpa = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sc-sync-state-rpc = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sc-sysinfo = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sp-consensus-grandpa = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sc-client-api = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sp-runtime = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sp-offchain = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sp-session = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sp-authority-discovery = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sp-storage = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sc-chain-spec = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sc-network = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sc-network-common = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sc-authority-discovery = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
# sc-finality-grandpa-warp-sync = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sc-consensus-slots = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sp-trie = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sp-timestamp = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
#sp-authorship = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
#sc-consensus-uncles = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
pallet-staking = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }

sc-rpc = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sp-api = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sc-rpc-api = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sp-blockchain = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sp-block-builder = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sc-basic-authorship = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
substrate-frame-rpc-system = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
pallet-transaction-payment-rpc = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
frame-system-rpc-runtime-api = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
pallet-im-online = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
frame-benchmarking = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
substrate-prometheus-endpoint = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
frame-benchmarking-cli = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }

# Tidechain
tidefi-primitives = { git = "https://github.com/tidelabs/primitives", branch = "substrate-monthly-2023-02", default-features = false }
tidechain-rpc = { path = "../rpc" }
tidechain-client = { path = "../client", default-features = false, optional = true }

# Tidechain runtimes
tidechain-runtime = { path = "../../runtime/tidechain", optional = true }
lagoon-runtime = { path = "../../runtime/lagoon", optional = true }

log = "0.4.17"

[features]
default = [ "tidechain-native", "full-node" ]
full-node = [
	"tidechain-client"
]
runtime-benchmarks = [
	"tidechain-runtime/runtime-benchmarks",
	"lagoon-runtime/runtime-benchmarks",
	"sc-service/runtime-benchmarks"
]
try-runtime = [
	"tidechain-runtime/try-runtime",
	"lagoon-runtime/try-runtime",
]
tidechain-native = [ "tidechain-runtime", "tidechain-client/tidechain" ]
lagoon-native = [ "lagoon-runtime", "tidechain-client/lagoon" ]
