[package]
version = "0.7.0"
name = "tidechain-service"
authors = ["Semantic Network Team <publishers@tidelabs.org>"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3" }
itertools = "0.10.1"
futures = "0.3.12"
thiserror = "1.0.30"
tracing = "0.1.34"
serde_json = "1.0.59"
hex = "0.4.3"
hex-literal = "0.3.1"
serde = { version = "1.0.156", features = ["derive"] }
strum = { version = "0.23.0" }
jsonrpc-core = "15.1.0"

sc-cli = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-core = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sc-executor = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sc-service = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sc-telemetry = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sc-keystore = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-inherents = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sc-transaction-pool = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-transaction-pool = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sc-consensus-babe = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-consensus-babe = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-consensus = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sc-consensus = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sc-consensus-grandpa = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sc-sync-state-rpc = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sc-sysinfo = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-consensus-grandpa = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sc-client-api = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-runtime = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-offchain = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-session = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-authority-discovery = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-storage = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sc-chain-spec = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sc-network = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sc-network-common = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sc-authority-discovery = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
# sc-finality-grandpa-warp-sync = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sc-consensus-slots = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-trie = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-timestamp = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
#sp-authorship = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
#sc-consensus-uncles = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-staking = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }

sc-rpc = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-api = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sc-rpc-api = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-blockchain = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-block-builder = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sc-basic-authorship = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
substrate-frame-rpc-system = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-transaction-payment-rpc = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
frame-system-rpc-runtime-api = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-im-online = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
frame-benchmarking = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
substrate-prometheus-endpoint = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
frame-benchmarking-cli = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }

# Tidechain
tidefi-primitives = { git = "https://github.com/tidelabs/primitives", branch = "dev", default-features = false }
tidechain-rpc = { path = "../rpc" }
tidechain-client = { path = "../client", default-features = false, optional = true }

# Tidechain runtimes
tidechain-runtime = { path = "../../runtime/tidechain", optional = true }
lagoon-runtime = { path = "../../runtime/lagoon", optional = true }

log = "0.4.17"

[features]
default = [ "tidechain-native", "full-node" ]
full-node = [
	"tidechain-client"
]
runtime-benchmarks = [
	"tidechain-runtime/runtime-benchmarks",
	"lagoon-runtime/runtime-benchmarks",
	"sc-service/runtime-benchmarks"
]
try-runtime = [
	"tidechain-runtime/try-runtime",
	"lagoon-runtime/try-runtime",
]
tidechain-native = [ "tidechain-runtime", "tidechain-client/tidechain" ]
lagoon-native = [ "lagoon-runtime", "tidechain-client/lagoon" ]
