[package]
authors = [""]
description = ''
edition = '2018'
homepage = 'https://substrate.dev'
name = 'pallet-quorum'
repository = ''
version = "1.0.0"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2'

[dependencies]
frame-support = { default-features = false, git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.0" }
frame-system = { default-features = false, git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.0" }
pallet-sudo = { default-features = false, git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.0" }
pallet-balances = { default-features = false, git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.0" }
pallet-assets = { default-features = false, path = "../assets" }
sp-runtime = { default-features = false, git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.0" }
frame-benchmarking = { default-features = false, git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.0", optional = true }
sp-std = {  default-features = false, git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.0" }
tidefi-primitives = { git = "https://tributary.semantic-network.tech/semnet/tidefi/back/tidefi-primitives", default-features = false }
serde      = { version = '1', features = ['derive'], optional = true }
pallet-security = { path = "../security", default-features = false }
pallet-asset-registry = { path = "../asset-registry", default-features = false }

[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { default-features = false, git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.0" }
sp-io = { default-features = false, git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.0" }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'pallet-balances/std',
    'pallet-sudo/std',
    'tidefi-primitives/std',
    "serde",
    "frame-benchmarking/std",
    "pallet-security/std",
    "pallet-asset-registry/std"
]
runtime-benchmarks = ["frame-benchmarking"]