[package]
authors = [""]
description = ''
edition = '2018'
homepage = 'https://substrate.dev'
name = 'pallet-wrapr-rpc'
repository = ''
version = "1.0.0"

[dependencies]
codec               = { package = 'parity-scale-codec', version = '2.2.0' }
jsonrpc-core        = '18.0.0'
jsonrpc-core-client = '18.0.0'
jsonrpc-derive      = '18.0.0'
jsonrpc-pubsub      = "18.0.0"
tidefi-primitives   = { git = "https://tributary.semantic-network.tech/semnet/tidefi/back/tidefi-primitives", default-features = false }
serde               = { version = '1.0.124', features = ['derive'] }
sp-api              = { git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.0" }
sp-blockchain       = { git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.0" }
sp-core             = { git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.0" }
sp-runtime          = { git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.0" }
frame-support       = { git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.0", default-features = false }

pallet-wrapr-rpc-runtime-api = { path = 'runtime-api', default-features = false }
